<resources>
    <string name="app_name">Grocery Application</string>
    <string name="apples">Apples</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_items_to_cart">Add Items To Cart</string>
    <string name="amt">AMT</string>
    <string name="total_cost">Total Cost</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item Name</string>
</resources>