<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:id="@+id/idLL1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/item_name"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVItemName" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVQuantity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:padding="4dp"
                android:layout_margin="3dp"
                android:id="@+id/idTVRate" />

            <ImageView
                android:id="@+id/idTVDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:layout_below="@id/idLL1"
            android:textColor="@color/white"
            android:layout_toStartOf="@id/idTVTotalAmt"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:id="@+id/idTVHeading" />

        <TextView
            android:id="@+id/idTVTotalAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLL1"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:padding="4dp"
            android:text="@string/amt"
            android:textColor="@color/white" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>